--- a/src/Components/ChatBotApp.css
+++ b/src/Components/ChatBotApp.css
@@ -38,7 +38,7 @@
   height: 100%;
   background-color: rgba(13, 17, 26, 0.9);
   backdrop-filter: blur(10px);
-  padding: 1rem;
+  /* padding: 1rem; */
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
@@ -117,11 +117,18 @@
   transform: scale(1.1);
 }
 
+.chat-list-items-wrapper {
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.8rem;
+}
+
 .chat-list-item {
   width: 100%;
   height: 6rem;
   background-color: rgba(19, 25, 39, 0.8);
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
@@ -254,7 +261,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 0 1rem;
   position: relative;
   border-bottom: 1px solid rgba(123, 142, 188, 0.1);
   z-index: 10;
@@ -351,7 +358,6 @@
 .chat-title-text {
   font-family: "Courier New", monospace;
   display: inline-block;
-  min-width: 20rem;
 }
 
 .chat-title .typewriter-cursor {
@@ -359,9 +365,8 @@
   color: #00ff99;
   animation: cursorBlink 1s step-end infinite;
   font-weight: bold;
-  margin-left: 0.3rem;
-  width: 0.5rem;
-  text-align: left;
+  /* margin-left: 0.1rem; */
+  font-size: 2rem;
 }
 
 @keyframes cursorBlink {
@@ -770,10 +775,6 @@
     text-overflow: ellipsis;
   }
 
-  .chat-title-text {
-    min-width: 15rem;
-  }
-
   .chat-title-left {
     flex-shrink: 1;
     min-width: auto;
@@ -810,6 +811,13 @@
   .chat-list.collapsed {
     width: 60%;
     transform: translateX(-100%);
+  }
+
+  .chat-list-items-wrapper {
+    padding: 0 0.5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.8rem;
   }
 
   .chat-title {
